# orion

./: .env  .gitignore  Cargo.toml  LICENSE  test
src/: architecture.md  charts.rs  graph.dot  lib.rs  lines  log.rs  main.rs  readme.md  series.rs  tcp_receive.rs  tcp_send.rs  tcp_test.rs  terminology.md  tests.rs  transport.rs  use_cases.rs  util.rs  wd40.rb
src/entities/: chart.rs  charts.rs  identified.rs  mod.rs  series.rs  session.rs  test_util.rs
src/gateways/: chart_repo.rs  mod.rs  named_datapoint.rs
src/io/: mod.rs  serialize.rs  tcp_named_datapoint_gateway.rs  tcp_server.rs  transport.rs  websocket_server.rs
src/transport/: mod.rs  tcp_server.rs  transport.rs
src/ui/: command.rs  command_input.rs  command_parser.rs  controller.rs  debug_view_model_output.rs  mod.rs  presenter.rs  transport_command_input.rs  view_model_output.rs  web.rs  websocket_view_model_output.rs
src/ui/windowed/: mod.rs  presenter.rs
src/use_cases/: chart_repo.rs  create_histogram.rs  mod.rs  repos.rs  use_cases.rs
src/web-ui/: app.css  app.js  chart_renderer.js  dialog-component.js  dialog_component.js  index.html  layout.js  server.js  util.js  view-model-input.js  view_model_input.js  watch_compile.sh
src/web-ui/compiled/: app.js  chart-renderer.js  chart-renderer.js.map  chart_renderer.js  chart_renderer.js.map  dialog-component.js  dialog-component.js.map  dialog_component.js  dialog_component.js.map  layout.js  layout.js.map  server.js  server.js.map  util.js  util.js.map  view-model-input.js  view-model-input.js.map  view_model_input.js  view_model_input.js.map
(+4 files in other folders)
