[package]
name = "orion"
version = "0.1.0"
authors = ["samdoiron <sam.doiron96@gmail.com>"]

[dependencies]
net2 = "0.2.16"
time = "0.1"
websocket = "~0.13.1"
rustc-serialize = "0.3"


[[bin]]
name = "main"
path = "src/main.rs"

[dependencies.test_util]
path = "../test_util"

[profile.dev]
debug = true
